- update users and menus management

--- a/public/css/admin.less
+++ b/public/css/admin.less
@@ -10,7 +10,7 @@ a.link:hover {
 a.edit, a.trash, a.delete, a.restore {
   display: inline-block;
   width: 70px;
-  text-align: center;
+  text-align: left;
 }
 
 .navbar-inverse .navbar-brand, .navbar-fixed-top .navbar-nav > li > a {
