- Update manual page

--- a/public/css/admin.less
+++ b/public/css/admin.less
@@ -51,3 +51,11 @@ p.navbar-right a {
     background-color: #428bca;
   }
 }
+
+.row-gap-medium {
+  min-height: 30px;
+}
+
+.alert-white {
+  background: #fff;
+}
