- Update dashboard page

--- a/public/css/admin.less
+++ b/public/css/admin.less
@@ -56,6 +56,18 @@ p.navbar-right a {
   min-height: 30px;
 }
 
+.row-gap-small {
+  min-height: 10px;
+}
+
 .alert-white {
   background: #fff;
+}
+
+.panel-white {
+  background-color: #fff;
+}
+
+.project-des-right {
+  padding-left: 70px;
 }
