- remove gioithieu directory - add uploads controller

--- a/public/css/admin.less
+++ b/public/css/admin.less
@@ -71,3 +71,29 @@ p.navbar-right a {
 .project-des-right {
   padding-left: 70px;
 }
+
+
+.upload-section {
+  .image-list {
+    .manage-asset {
+      margin-top: 10px;
+      text-align: center;
+    }
+    .no-image-notice {
+      padding-left: 20px;
+    }
+    ul {
+      padding-left: 0;
+    }
+    ul li {
+      list-style: none;
+      float: left;
+      padding: 8px 8px;
+    }
+    li.active {
+      box-shadow: inset 0 0 2px 3px #f1f1f1,inset 0 0 0 7px #5b9dd9;
+      -webkit-box-shadow: inset 0 0 2px 3px #f1f1f1,inset 0 0 0 7px #5b9dd9;
+      -moz-box-shadow: inset 0 0 2px 3px #f1f1f1,inset 0 0 0 7px #5b9dd9;
+    }
+  }
+}
