--- a/public/css/shopnoithat.css
+++ b/public/css/shopnoithat.css
@@ -23,12 +23,12 @@ body {
 .h2-title {
 	color: #535353;
 	font-size: 184%;
-	font-weight: bold;
+	/* font-weight: bold */ font-weight: 400;
 }
 .h3-title {
 	color: #535353;
 	font-size: 134%;
-	font-weight: bold;
+	/* font-weight: bold */ font-weight: 400;
 }
 #Shop-box {
 	width: 1000px;
@@ -59,7 +59,7 @@ body {
 }
 #Shop-box ul li .title {
 	font-size: 300%;
-	font-weight: bold;
+	/* font-weight: bold */ font-weight: 400;
 	padding: 405px 0 0;
 }
 #Shop-box ul li .detail {
@@ -110,7 +110,7 @@ body {
 	margin-right: -5px;
 	background: url(../images/shopnoithat/bg_line.png) no-repeat right center;
 	cursor: pointer;
-	font-weight: bold;
+	/* font-weight: bold */ font-weight: 400;
 }
 #Tab-box li.last {
 	margin-right: 0px;
