--- a/public/css/common.css
+++ b/public/css/common.css
@@ -73,7 +73,7 @@ body {
 }
 #Nav li a {
 	color: #868787;
-	font-weight: bold;
+	/* font-weight: bold */ font-weight: 400;
 	display: inline-block;
 	padding: 50px 10px 10px 10px;
 	text-decoration: none;
@@ -160,7 +160,7 @@ body {
 	width: 90px;
 	text-align: center;
 	color: #fff;
-	font-weight: bold;
+	/* font-weight: bold */ font-weight: 400;
 	background: #ff0000;
 	padding: 5px 0;
 	position: absolute;
@@ -215,7 +215,7 @@ body {
 	height: 375px;
 }
 #Footer .left {
-	width: 300px;
+	width: 410px;
 	color: #9c9c9c;
 }
 #Footer .left p {
@@ -223,7 +223,7 @@ body {
 }
 #Footer .left .company-name {
 	font-size: 134%;
-	font-weight: bold;
+	/* font-weight: bold */ font-weight: 400;
 	line-height: 30px;
 }
 #Footer .right {
@@ -238,7 +238,7 @@ body {
 	width: 110px;
 	float: left;
 	padding: 5px 0;
-	font-weight: bold;
+	/* font-weight: bold */ font-weight: 400;
 	text-align: right;
 }
 .form dd {
@@ -261,12 +261,12 @@ body {
 }
 .hotline {
 	color: #fff;
-	font-weight: bold;
+	/* font-weight: bold */ font-weight: 400;
 	text-align: right;
 }
 .comment {
 	color: #9c9c9c;
-	font-weight: bold;
+	/* font-weight: bold */ font-weight: 400;
 	text-align: right;
 }
 #Choose, #Cancel, #Submit {
