--- a/public/css/gioithieu.css
+++ b/public/css/gioithieu.css
@@ -12,12 +12,12 @@ Made by Quoctk (クック)
 .h2-title {
 	color: #535353;
 	font-size: 184%;
-	font-weight: bold;
+	/* font-weight: bold */ font-weight: 400;
 }
 .h3-title {
 	color: #535353;
 	font-size: 134%;
-	font-weight: bold;
+	/* font-weight: bold */ font-weight: 400;
 }
 #Tab-box {
 	width: 100%;
@@ -65,11 +65,11 @@ Made by Quoctk (クック)
 .leader .name {
 	color: #000;
 	font-size: 184%;
-	font-weight: bold;
+	/* font-weight: bold */ font-weight: 400;
 }
 .leader .position {
 	font-size: 134%;
-	font-weight: bold;
+	/* font-weight: bold */ font-weight: 400;
 }
 .leader .detail {
 	width: 808px;
@@ -101,7 +101,7 @@ Made by Quoctk (クック)
 }
 .staff .name {
 	font-size: 134%;
-	font-weight: bold;
+	/* font-weight: bold */ font-weight: 400;
 	margin-top: 15px;
 }
 .staff .position {
@@ -132,7 +132,7 @@ Made by Quoctk (クック)
 	width: 530px;
 	float: left;
 	font-size: 134%;
-	font-weight: bold;
+	/* font-weight: bold */ font-weight: 400;
 }
 .schedule .date-post {
 	width: 80px;
