--- a/public/css/jquery.bxslider.css
+++ b/public/css/jquery.bxslider.css
@@ -60,7 +60,7 @@
 	text-align: center;
 	font-size: .85em;
 	font-family: Arial;
-	font-weight: bold;
+	/* font-weight: bold */ font-weight: 400;
 	color: #666;
 	padding-top: 20px;
 }
