--- a/public/css/lightbox.css
+++ b/public/css/lightbox.css
@@ -158,7 +158,7 @@
 /* line 103, ../sass/lightbox.sass */
 .lb-data .lb-caption {
   font-size: 13px;
-  font-weight: bold;
+  /* font-weight: bold */ font-weight: 400;
   line-height: 1em;
 }
 /* line 107, ../sass/lightbox.sass */
