--- a/public/css/module.css
+++ b/public/css/module.css
@@ -79,7 +79,7 @@
 .align-left { text-align: left; }
 .align-right { text-align: right; }
 .align-center { text-align: center; }
-.bold {	font-weight: bold; }
+.bold {	/* font-weight: bold */ font-weight: 400; }
 
 /*margin*/
 .mt-10				{ margin-top: 10px; }
