Fix paging for latest project error

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -326,3 +326,6 @@ body {
 	background: url(../images/common/pagetop.png) top center no-repeat;
 	display: block;
 }
+.invisible {
+	visibility: hidden;
+}
