--- a/public/css/index.css
+++ b/public/css/index.css
@@ -14,13 +14,13 @@ Made by Quoctk (クック)
 }
 .h2-title {
 	color: #535353;
-	font-size: 184%;
-	/* font-weight: bold */ font-weight: 400;
+	font-size: 1.3em;
+	/* font-weight: bold */
 }
 .h3-title {
 	color: #535353;
-	font-size: 134%;
-	/* font-weight: bold */ font-weight: 400;
+	font-size: 1.2em;
+	/* font-weight: bold */
 }
 #Tab-box {
 	width: 250px;
@@ -97,7 +97,7 @@ Made by Quoctk (クック)
 	width: 60px;
 	height: 34px;
 	color: #fff;
-	font-size: 134%;
+	font-size: 1.3em;
 	/* font-weight: bold */ font-weight: 400;
 	text-align: center;
 	padding: 2px 0 0;
@@ -108,7 +108,7 @@ Made by Quoctk (クック)
 }
 .step li .title {
 	color: #535353;
-	font-size: 134%;
+	font-size: 1.3em;
 	border-bottom: 1px solid #9c9c9c;
 	padding: 20px 0 0px 0;
 }
@@ -149,7 +149,7 @@ Made by Quoctk (クック)
 }
 .list-project li .project-name {
 	color: #535353;
-	font-size: 134%;
+	font-size: 1.3em;
 	/* font-weight: bold */ font-weight: 400;
 	padding: 5px 0 0;
 }
